--- a/17_AuthenticationWithJWT/pom.xml
+++ b/17_AuthenticationWithJWT/pom.xml
@@ -80,6 +80,11 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
