--- a/17_AuthenticationWithJWT/src/main/resources/application.yml
+++ b/17_AuthenticationWithJWT/src/main/resources/application.yml
@@ -22,6 +22,8 @@ spring:
      pathmatch:
        matching-strategy: ant-path-matcher
 spring-doc:
-  pathsToMatch: /api/**/v1/**
+  pathsToMatch:
+    - /api/**/v1/**
+    - /auth/**
   swagger-ui:
     use-root-path: true
