--- a/17_AuthenticationWithJWT/src/main/resources/application.yml
+++ b/17_AuthenticationWithJWT/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 cors:
-  originPatterns: http://localhost:8080,http://localhost:3000
+  originPatterns: http://localhost:8080,http://localhost:3000,https://github.com/Gust4ngl
 security:
   jwt:
     token:
