--- a/17_AuthenticationWithJWT/src/test/resources/application.yml
+++ b/17_AuthenticationWithJWT/src/test/resources/application.yml
@@ -6,10 +6,13 @@ security:
   jwt:
     token:
       secret-key: 53cr37
-      expire-lenght: 3600000
+      expire-length: 3600000
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   jpa:
     hibernate:
       ddl-auto: none
