--- a/20_UploadAndDownload/src/main/resources/application.yml
+++ b/20_UploadAndDownload/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 cors:
   originPatterns: http://localhost:8080,http://localhost:3000,https://github.com/Gust4ngl
+file:
+  upload-dir: /home/gusta/Documentos/Github/RestWithSpringBootAndJava/20_UploadAndDownload/Files
 security:
   jwt:
     token:
@@ -18,6 +20,12 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: false
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 2KB
+      max-file-size: 200MB
+      max-request-size: 215MB
   mvc:
      pathmatch:
        matching-strategy: ant-path-matcher
