--- a/20_UploadAndDownload/src/test/resources/application.yml
+++ b/20_UploadAndDownload/src/test/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8888
 cors:
   originPatterns: http://localhost:8080,http://localhost:3000
+file:
+  upload-dir: /home/gusta/Documentos/Github/RestWithSpringBootAndJava/20_UploadAndDownload
 security:
   jwt:
     token:
@@ -20,6 +22,12 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: false
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 2KB
+      max-file-size: 200MB
+      max-request-size: 215MB
 spring-doc:
   pathsToMatch: /api/**/v1/**
   swagger-ui:
