--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 HELP.md
-!21_Docker/.mvn/wrapper/maven-wrapper.jar
+target/
+!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
