--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -29,7 +29,7 @@ jobs:
       run: mvn clean package
       
     - name: Docker compose build
-      working-directory: ./RestWithSpringBootAndJava
+      working-directory: ./21_Docker/
       run: docker compose build
       
     - name: Push to docker hub container registry
